Closed Bug 1601743 Opened 6 years ago Closed 6 years ago

Firefox does not set the value of `document.referrer` to that of the Referer header sent

Categories

(Core :: Networking, defect, P2)

73 Branch
Desktop
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox-esr68 --- unaffected
firefox71 --- unaffected
firefox72 --- disabled
firefox73 --- fixed

People

(Reporter: alice0775, Assigned: mattwoodrow)

References

(Regression)

Details

(Keywords: nightly-community, regression, Whiteboard: [necko-triaged])

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1601496 +++

When I test Bug 1601496, I found a new regression bug.

Steps to reproduce:

  1. Install Smart Referer Version 0.2.12 (https://addons.mozilla.org/de/firefox/addon/smart-referer/)
  2. Search for “BrowserLeaks JavaScript”
  3. Open the first search result (should be https://browserleaks.com/javascript)
  4. Observe the value of the Document Referrer row:

Actual results:
Document Referrer is empty

Expected results:
Document Referrer should be https://browserleaks.com/javascript

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=f748a3d2cdf108e9443fd15332efe477c7c398a9&tochange=25b533bff4051e6a8177bbc83eed49ac460e109e

Version: 72 Branch → 73 Branch
Component: Request Handling → Networking
Flags: needinfo?(matt.woodrow)
Product: WebExtensions → Core
See Also: → 1601496
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/052b2bc4479f Don't apply the referrer header to the referrer that we send back to the content process when converting a DocumentChannel into a real channel. r=Ehsan
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: