Bug 1601743 - Don't apply the referrer header to the referrer that we send back to the content process when converting a DocumentChannel into a real channel. r=Ehsan

Differential Revision: https://phabricator.services.mozilla.com/D56841

--HG--
extra : moz-landing-system : lando